--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -513,6 +513,7 @@ En réalité la visualisation intervient à toutes les étapes du travail d’un
 
 \end{itemize}
 \section{Conclusion}
+Le Big Data qui correspond à un très grand volume de données provenant de diverses sources représente un enjeu considérable dans notre société en développement. Que ce soit dans le domaine du  marketing, dans les télécommunications ou encore la surveillance, le Big Data a une valeur très importante dans pratiquement tous les domaines et concerne peu à peu tous les secteurs d'activités. C'est pour cela que les ingénieurs développent continuellement de nouveaux système de gestion de base de données afin d'optimiser la manipulation du Big Data. 
 
 \newpage
 \section*{Liens}
