--- a/CPI2/cahier_des_charges/main.tex
+++ b/CPI2/cahier_des_charges/main.tex
@@ -4,39 +4,22 @@
 \usepackage[francais]{babel}
 \usepackage{natbib}
 \usepackage{url}
-\usepackage[T1]{fontenc}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
 \usepackage{graphicx}
-\usepackage[table,xcdraw]{xcolor}
-\usepackage{wrapfig}
 \usepackage{float}
-\usepackage[rightcaption]{sidecap}
 \graphicspath{{images/}}
-\usepackage{titlesec}
-\setcounter{secnumdepth}{4}
-
-\titleformat{\paragraph}
-{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
-\titlespacing*{\paragraph}
-{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 \usepackage{amsthm}
 \usepackage{parskip}
 \usepackage{fancyhdr}
-\AddThinSpaceBeforeFootnotes
-\FrenchFootnotes
 \usepackage{xfrac}
 \usepackage{esvect}
 \usepackage{vmargin}
-
-\usepackage{datetime}
-\newdate{date}{23}{06}{2016}
-\date{\displaydate{date}}
-
 \usepackage{gensymb}
 \setmarginsrb{3 cm}{2.5 cm}{3 cm}{2.5 cm}{1 cm}{1.5 cm}{1 cm}{1.5 cm}
 
-\title{Big Data}								% Title
+\title{Big Data et applications sur Spark}								% Title
+\author{TIPE}								% Author
 \date{\today}											% Date
 
 \makeatletter
@@ -60,13 +43,13 @@
 \begin{titlepage}
 	\centering
     \vspace*{0.5 cm}
-    \includegraphics[scale = 0.75 ]{logo1}\\[1.0 cm]	% University Logo
+    \includegraphics[scale = 0.75 ]{logo1.png}\\[1.0 cm]	% University Logo
     \textsc{\LARGE EISTI}\\[2.0 cm]			% University Name
     \rule{\linewidth}{0.2 mm} \\[0.5 cm]
     { \huge \bfseries \thetitle}\\
     \rule{\linewidth}{0.2 mm} \\[1.5 cm]
-	\textsc{\Large Généralités sur le Big Data}\\[0.5 cm]	% Course Code
-	
+	\textsc{\Large Cahier des charges - TIPE}\\[0.5 cm]	% Course Code
+	\textsc{\large CPI2 C2}\\[0.5 cm]		% Course Name
 	
 	\begin{minipage}{0.4\textwidth}
 	\centering
@@ -75,12 +58,11 @@
 		Mandry MBUNDU \\
 		David RIGAUX \\
 		Mehdi DALAA \\
-		\textsc{\large CPI1 C2}\\[0.5 cm]		% Course Name
 			\end{center}
 			\end{minipage}~
 			\begin{minipage}{0.4\textwidth}
 	\end{minipage}\\[0.8 cm]
-	{\large \displaydate{date}}\\[1 cm]
+	{\large \thedate}\\[1 cm]
 	\vfill
 	
 \end{titlepage}
@@ -92,6 +74,10 @@
 \pagebreak
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Introduction}
 
+\section*{Introduction}
+\section{D\'ecouvrir les fonctionalit\'ees de Spark}
+On commence par des algorithmes de traitement de donn\'es simple.
+\section{\'Ecrire des programmes en Python sous Spark pour algorithmes d'analyses}
+Exemple d'algorithme, K-Means.
 \end{document}
